<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:layout_gravity="center" >

    <TextView
        android:paddingTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloConfirmacao"
        android:textSize="20sp"/>

    <TableLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:paddingTop="200dp"
        android:paddingBottom="25dp">

        <TableRow>
            <TextView
                android:id="@+id/label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Data: "
                android:textStyle="bold"
                android:paddingBottom="10px"/>

            <TextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10px"/>

        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horario"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="10px"/>

            <TextView
                android:id="@+id/horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10px"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/label3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/servico"
                android:paddingBottom="10px" />

            <TextView
                android:id="@+id/servico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow android:paddingTop="50dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/confirmar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirmar" />
        </TableRow>
    </TableLayout>


</FrameLayout>